--- a/.github/workflows/post-memes.yml
+++ b/.github/workflows/post-memes.yml
@@ -20,10 +20,11 @@ jobs:
         uses: actions/setup-python@v5 # Use the latest stable version
         with:
           python-version: "3.9" # Pin to a specific Python version for reproducibility
-          cache: 'pip'          # Cache pip dependencies for faster builds
+          # Removed: cache: 'pip' - because you don't have requirements.txt or pyproject.toml
 
       - name: Install Python Dependencies
-        run: pip install feedparser requests # Install required libraries
+        # These dependencies are installed directly as they are not in a requirements.txt
+        run: pip install feedparser requests
 
       - name: Run Meme Posting Script
         env:
