--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -1,11 +1,18 @@
-# .github/workflows/test.yml
-name: Test Facebook Post
+# .github/workflows/post.yml
+name: Auto Post Memes
 
 on:
+  schedule:
+    # 8:05 AM UTC
+    - cron: "5 8 * * *"
+    # 2:05 PM UTC
+    - cron: "5 14 * * *"
+    # 8:05 PM UTC
+    - cron: "5 20 * * *"
   workflow_dispatch:      # Allows manual trigger from GitHub UI
 
 jobs:
-  test_post:
+  post:
     runs-on: ubuntu-latest # Runs on a fresh Ubuntu virtual machine
 
     steps:
@@ -18,11 +25,12 @@ jobs:
           python-version: "3.9"
 
       - name: Install Python Dependencies
-        run: pip install requests # Install the 'requests' library needed for API calls
+        run: pip install feedparser requests # Install required libraries
 
-      - name: Run Facebook Test Post Script
+      - name: Run Meme Posting Script
         env:
           # Pass your Facebook secrets as environment variables to the script
+          RSS_URL: ${{ secrets.RSS_URL }}
           PAGE_ACCESS_TOKEN: ${{ secrets.PAGE_ACCESS_TOKEN }}
           PAGE_ID: ${{ secrets.PAGE_ID }}
-        run: python test.py # Execute the test.py script
+        run: python post.py # Execute the main posting script
