Update and rename post.yml to posting.yml

--- a/.github/workflows/posting.yml
+++ b/.github/workflows/posting.yml
@@ -1,18 +1,18 @@
-# .github/workflows/post.yml
-name: Auto Post Memes
+# .github/workflows/posting.yml
+name: Scheduled Meme Poster
 
 on:
   schedule:
-    # 8:05 AM UTC
+    # 8:05 AM UTC (11:05 AM EEST)
     - cron: "5 8 * * *"
-    # 2:05 PM UTC
+    # 2:05 PM UTC (5:05 PM EEST)
     - cron: "5 14 * * *"
-    # 8:05 PM UTC
+    # 8:05 PM UTC (11:05 PM EEST)
     - cron: "5 20 * * *"
   workflow_dispatch:      # Allows manual trigger from GitHub UI
 
 jobs:
-  post:
+  post_meme:
     runs-on: ubuntu-latest # Runs on a fresh Ubuntu virtual machine
 
     steps:
